--- a/gen/parse/templates/get.template
+++ b/gen/parse/templates/get.template
@@ -8,11 +8,11 @@ This needs to be updated for 1-1 relations.
         if r.UID() == "" {
             return mulbase.ErrUID
         }
-        q, err := mulbase.GetChild(r,"{{.Tag}}",{{.Type}}Fields,{{if .IsArray}}count,{{else}}-1,{{end}} filter)
-        if err != nil {
-            return err
+        q := mulbase.GetChild(r,"{{.Tag}}",{{.Type}}Fields,{{if .IsArray}}count,{{else}}-1,{{end}} filter)
+        if q == nil {
+            return newError("could not create query")
         }
-        err = db.Query(context.Background(), q, &r.{{.Name}})
+        err := db.Query(context.Background(), q, &r.{{.Name}})
         return err
     }
     //TODO. Don't use this.
