--- a/gen/parse/templates/global.template
+++ b/gen/parse/templates/global.template
@@ -1,19 +1,19 @@
 {{/* Global fields. */}}
 
 //Beginning of field.template. General functions.
-var globalFields = make(map[mulbase.Predicate]mulbase.Field)
+var globalFields = make(map[humus.Predicate]humus.Field)
 
-func GetField(name mulbase.Predicate) mulbase.Field {
+func GetField(name humus.Predicate) humus.Field {
 	return globalFields[name]
 }
 
-func MakeField(name mulbase.Predicate, flags mulbase.FieldMeta) mulbase.Field {
-    var fi = mulbase.Field{Name:name, Meta:flags}
+func MakeField(name humus.Predicate, flags humus.FieldMeta) humus.Field {
+    var fi = humus.Field{Name:name, Meta:flags}
     globalFields[name] = fi
     return fi
 }
 
-func GetGlobalFields() map[mulbase.Predicate]mulbase.Field {
+func GetGlobalFields() map[humus.Predicate]humus.Field {
     return globalFields
 }
 
