--- a/gen/parse/templates/recurse.template
+++ b/gen/parse/templates/recurse.template
@@ -28,5 +28,5 @@ func (r *{{.Name}}) recurse(counter int) int {
 //Recurse iterates through the node and allocates type and UID
 //to pointer nodes.
 func (r *{{.Name}}) Recurse(counter int) int {
-    return r.recurse(0)
+    return r.recurse(counter)
 }
