--- a/gen/parse/templates/model.template
+++ b/gen/parse/templates/model.template
@@ -40,7 +40,7 @@ func (r *{{.Name}}) Facets() []string {
 }
 
 //Fields returns all Scalar fields for this value.
-func (r *{{.Name}}) Fields() humus.FieldList {
+func (r *{{.Name}}) Fields() humus.Fields {
     return {{.Name}}Fields
 }
 var _{{.Name}}Types = []string {
@@ -60,6 +60,7 @@ var _{{.Name}}Types = []string {
 func (r *{{.Name}}) SetType() {
     r.Node.Type = _{{.Name}}Types
 }
+/*
 //Values returns all the scalar values for this node.
 func (r *{{.Name}}) Values() humus.DNode{
    var m {{.Name}}Scalars
@@ -72,6 +73,7 @@ func (r *{{.Name}}) Values() humus.DNode{
    m.Node = r.Node
    return &m
 }
+*/
 /*
 //Values returns all the scalar values for this node.
 //Note that this completely ignores any omitempty tags so use with care.
@@ -90,7 +92,7 @@ m["{{.Tag}}"]= r.{{.Name}}
     return m
 }
 */
-
+/*
 //{{.Name}}Scalars is simply to avoid a map[string]interface{}
 //It is a mirror of the previous struct with all scalar values.
 type {{.Name}}Scalars struct {
@@ -107,5 +109,5 @@ func (s *{{.Name}}Scalars) Values() humus.DNode {
 func (s *{{.Name}}Scalars) Fields() humus.FieldList {
     return {{.Name}}Fields
 }
-
+*/
 //End of model.template
